# sales-agents-sys

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/agents/: crew.py
backend/agents/config/: agents.yaml  tasks.yaml
backend/api/: routes.py
backend/core/: config.py
backend/endpoints/: routes.py
backend/schemas/: prospect.py
backend/services/: __init__.py  crew_parse.py  prospect.py
backend/tests/http_requests/: routes.http
backend/tests/unit/: test_crew.py  test_health.py  test_prospect.py
docs/: ROADMAP.md
frontend/: index.html
frontend/scripts/: api.js  main.js  mockData.js  responseExample.js
frontend/scripts/data/: responseExample.js
frontend/styles/: style.css
